force-app/main/default/objects/FieloPLT__KPIDomain__c/FieloPLT__KPIDomain__c.object-meta.xml
<CustomObject>
    <description>Allows you to add a Report to an existing Program, Challenge or Promotion. It is where the Report is stored within a Fielo object.</description>
    <label>KPI Domain</label>
    <nameField>
        <displayFormat>KD-{0000000000}</displayFormat>
        <label>KPI Domain</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>