force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Challenge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Challenge associated with a KPI Domain.</description>
    <inlineHelpText>The Challenge associated with this KPI Domain.</inlineHelpText>
    <label>Challenge</label>
    <referenceTo>FieloPLT__Challenge__c</referenceTo>
    <relationshipLabel>KPI Domains</relationshipLabel>
    <relationshipName>KPIDomains</relationshipName>
    <type>Lookup</type>
</CustomField>