force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__EndDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EndDate__c</fullName>
    <description>Date for the report to run until.</description>
    <inlineHelpText>Choose a date for the report to run until.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>