force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__FullPeriod__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__FullPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When on, the KPI Report covers the full period of time for which data is available.</description>
    <inlineHelpText>When on, the KPI Report will cover the full period of time for which data is available.</inlineHelpText>
    <label>Full Period</label>
    <type>Checkbox</type>
</CustomField>