force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__KPI__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__KPI__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines how your Salesforce Report interacts with your objects - Programs, Promotions and Challenges</description>
    <inlineHelpText>Enter a KPI upon which to base your report. You can view, edit and create KPIs by accessing the &quot;Event&quot; Action in the FieloPLT Library.</inlineHelpText>
    <label>KPI</label>
    <referenceTo>FieloPLT__KPI__c</referenceTo>
    <relationshipLabel>KPI Domains</relationshipLabel>
    <relationshipName>KPI_Domains</relationshipName>
    <type>Lookup</type>
</CustomField>