force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__Objective__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Objective__c</fullName>
    <description>The numerical objective against which the Report Objective Field defined in the KPI will be compared.</description>
    <inlineHelpText>Enter a numerical objective. This value will be compared against the Report Objective Field defined in your KPI.</inlineHelpText>
    <label>Objective</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>