force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Order__c</fullName>
    <description>The order in which a KPI Report will appear on the Program, Promotion or Challenge page.</description>
    <inlineHelpText>Enter the order in which your KPI Report will appear on the Program, Promotion or Challenge page.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>