force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__ParentId__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ParentId__c</fullName>
    <description>The ID of the Program, Promotion or Challenge in which a KPI Domain resides.</description>
    <formula>IF(ISBLANK(FieloPLT__Promotion__c), IF(ISBLANK(FieloPLT__Challenge__c), FieloPLT__Program__c, FieloPLT__Challenge__c), FieloPLT__Promotion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID of the Program, Promotion or Challenge in which this KPI Domain resides.</inlineHelpText>
    <label>Parent ID</label>
    <type>Text</type>
</CustomField>