force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__Performance__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Performance__c</fullName>
    <description>When the KPI Report is a Snapshot, the Objective is compared with this value.</description>
    <inlineHelpText>When the KPI Report is a Snapshot, the Objective is compared with this value.</inlineHelpText>
    <label>Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>