force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__Period__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Period__c</fullName>
    <description>The period over which the Report is to be run.</description>
    <formula>IF(
 !ISNULL(FieloPLT__StartDate__c) &amp;&amp; FieloPLT__StartDate__c = FieloPLT__EndDate__c,
  TEXT(Day(FieloPLT__StartDate__c)) + &apos; &apos; + CASE( MONTH(FieloPLT__StartDate__c), 1, &apos;Jan&apos;, 2, &apos;Feb&apos;, 3, &apos;Mar&apos;, 4, &apos;Apr&apos;, 5, &apos;May&apos;, 6, &apos;Jun&apos;, 7, &apos;Jul&apos;, 8, &apos;Aug&apos;, 9, &apos;Sep&apos;, 10, &apos;Oct&apos;, 11, &apos;Nov&apos;, 12,  &apos;Dec&apos;, &apos;&apos;) + &apos; &apos; + TEXT(YEAR(FieloPLT__StartDate__c) ) ,
  IF( Year(FieloPLT__StartDate__c) = Year(FieloPLT__EndDate__c) ,
    IF( Month(FieloPLT__StartDate__c) = Month(FieloPLT__EndDate__c) ,
      TEXT(Day(FieloPLT__StartDate__c)) + &apos; - &apos; + TEXT(Day(FieloPLT__EndDate__c)) + &apos; &apos; + CASE( MONTH(FieloPLT__StartDate__c), 1, &apos;Jan&apos;, 2, &apos;Feb&apos;, 3, &apos;Mar&apos;, 4, &apos;Apr&apos;, 5, &apos;May&apos;, 6, &apos;Jun&apos;, 7, &apos;Jul&apos;, 8, &apos;Aug&apos;, 9, &apos;Sep&apos;, 10, &apos;Oct&apos;, 11, &apos;Nov&apos;, 12,  &apos;Dec&apos;, &apos;&apos;) + &apos; &apos; + TEXT(YEAR(FieloPLT__StartDate__c) )
      ,
      TEXT(Day(FieloPLT__StartDate__c)) + &apos; &apos; + CASE( MONTH(FieloPLT__StartDate__c), 1, &apos;Jan&apos;, 2, &apos;Feb&apos;, 3, &apos;Mar&apos;, 4, &apos;Apr&apos;, 5, &apos;May&apos;, 6, &apos;Jun&apos;, 7, &apos;Jul&apos;, 8, &apos;Aug&apos;, 9, &apos;Sep&apos;, 10, &apos;Oct&apos;, 11, &apos;Nov&apos;, 12,  &apos;Dec&apos;, &apos;&apos;) + &apos; - &apos; + TEXT(Day(FieloPLT__EndDate__c)) + &apos; &apos; + CASE( MONTH(FieloPLT__EndDate__c), 1, &apos;Jan&apos;, 2, &apos;Feb&apos;, 3, &apos;Mar&apos;, 4, &apos;Apr&apos;, 5, &apos;May&apos;, 6, &apos;Jun&apos;, 7, &apos;Jul&apos;, 8, &apos;Aug&apos;, 9, &apos;Sep&apos;, 10, &apos;Oct&apos;, 11, &apos;Nov&apos;, 12,  &apos;Dec&apos;, &apos;&apos;) + &apos; &apos; + TEXT(YEAR(FieloPLT__StartDate__c) )
    )
  ,
     IF( ISNULL(FieloPLT__StartDate__c), &apos;&apos;, TEXT(Day(FieloPLT__StartDate__c)) + &apos; &apos; + CASE( MONTH(FieloPLT__StartDate__c), 1, &apos;Jan&apos;, 2, &apos;Feb&apos;, 3, &apos;Mar&apos;, 4, &apos;Apr&apos;, 5, &apos;May&apos;, 6, &apos;Jun&apos;, 7, &apos;Jul&apos;, 8, &apos;Aug&apos;, 9, &apos;Sep&apos;, 10, &apos;Oct&apos;, 11, &apos;Nov&apos;, 12,  &apos;Dec&apos;, &apos;&apos;) + &apos; &apos; + TEXT(YEAR(FieloPLT__StartDate__c) ) ) + &apos; -  &apos; + IF( ISNULL(FieloPLT__EndDate__c), &apos;&apos;, TEXT(Day(FieloPLT__EndDate__c)) + &apos; &apos; + CASE( MONTH(FieloPLT__EndDate__c), 1, &apos;Jan&apos;, 2, &apos;Feb&apos;, 3, &apos;Mar&apos;, 4, &apos;Apr&apos;, 5, &apos;May&apos;, 6, &apos;Jun&apos;, 7, &apos;Jul&apos;, 8, &apos;Aug&apos;, 9, &apos;Sep&apos;, 10, &apos;Oct&apos;, 11, &apos;Nov&apos;, 12,  &apos;Dec&apos;, &apos;&apos;) + &apos; &apos; + TEXT(YEAR(FieloPLT__EndDate__c) ) )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The period over which the Report is to be run.</inlineHelpText>
    <label>Period</label>
    <type>Text</type>
</CustomField>