force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program associated with a KPI Domain.</description>
    <inlineHelpText>The Program associated with this KPI Domain.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>KPI Domains</relationshipLabel>
    <relationshipName>KPIDomains</relationshipName>
    <type>Lookup</type>
</CustomField>