force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__Promotion__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Promotion associated with a KPI Domain.</description>
    <inlineHelpText>The Promotion associated with this KPI Domain.</inlineHelpText>
    <label>Promotion</label>
    <referenceTo>FieloPLT__Promotion__c</referenceTo>
    <relationshipLabel>KPI Domains</relationshipLabel>
    <relationshipName>KPIDomains</relationshipName>
    <type>Lookup</type>
</CustomField>