force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__Snapshot__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Snapshot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When on, the KPI Report is a Snapshot, that is, a report of historical data at a specified point in time.</description>
    <inlineHelpText>When on, the KPI Report will be a Snapshot, that is, a report of historical data at a specified point in time.</inlineHelpText>
    <label>Snapshot</label>
    <type>Checkbox</type>
</CustomField>