force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__StartDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__StartDate__c</fullName>
    <description>Date for the report to start from.</description>
    <inlineHelpText>Choose a date for the report to start from.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>