force-app/main/default/objects/FieloPLT__KPIDomain__c/fields/FieloPLT__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UniqueKey__c</fullName>
    <label>Unique Key</label>
    <length>85</length>
    <type>Text</type>
</CustomField>